# bsi

./: .gitignore  CITATION.cff  LICENSE  README.md  getting-started.ipynb  pyproject.toml  train.py
bsi/: bfn.py  bsi.py  lr_scheduler.py  vdm.py
bsi/data/: cifar10.py  h5image.py  imagenet.py  sampler.py
bsi/lightning/: callbacks.py  plugins.py  strategies.py
bsi/models/: dit.py  mlp.py  pos_emb.py  utils.py  vdm_unet.py
bsi/nn/: __init__.py  attention.py  fourier_features.py  mlp.py  residual_block.py  sequential.py  simplified_unet.py
bsi/tasks/: bfn.py  bsi.py  plot_utils.py  vdm.py
bsi/tasks/metrics/: fid.py
bsi/utils/: __init__.py  hydra.py  logging.py  path.py  seed.py
config/: train.yaml
config/data/: cifar10.yaml  imagenet.yaml  imagenet32.yaml  imagenet64.yaml
config/experiment/: cifar10-vdm.yaml  imagenet32-dit.yaml  imagenet32.yaml  imagenet64-dit.yaml  imagenet64.yaml
config/hydra/launcher/: slurm.yaml
config/mode/: debug.yaml  interactive.yaml  normal.yaml
config/task/: bfn.yaml  bsi.yaml  vdm.yaml
config/task/bfn/: config.yaml
config/task/bsi/: config.yaml
config/task/ema/: ema.yaml
config/task/lr_scheduler/: cosine.yaml  warmup.yaml
config/task/model/bsi/: dit.yaml  mlp.yaml  unet.yaml
config/task/model/fourier_features/: fourier.yaml
config/task/model/pos_emb/: nyquist.yaml
config/task/optimizer/: adam.yaml  adamw.yaml
config/task/vdm/: config.yaml
scripts/: compute_fid_stats.py  eval_elbo.py  eval_fid.py  eval_overrides.py  generate_sample_history.py  generate_samples.py  render_samples.py  sample_h_alpha.py
tests/: conftest.py  test_bsi.py
tests/models/components/: test_fourier_features.py
