[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bsi"
version = "0.1.0"
description = "Bayesian Sample Inference"
authors = [
  {name = "Marten Lienen", email = "m.lienen@tum.de"},
]
license = {text = "MIT"}
dependencies = [
  # PyTorch etc.
  "lightning ~= 2.4",
  "torchdata",
  "einops",
  "jaxtyping",
  "Pillow",

  # Data loading
  "h5py",

  # General science & ml
  "numpy",

  # Plotting & visualization
  "matplotlib",

  # hydra & logging
  "hydra-core ~= 1.3",
  # dev-version for srun_args
  "hydra-submitit-launcher @ git+https://github.com/facebookresearch/hydra/#egg=hydra-submitit-launcher&subdirectory=plugins/hydra_submitit_launcher",
  "wandb",

  # Utilities
  "tqdm",
  "rich",
  "ipython",
  "ipdb",
  "jupyterlab",
  "ipympl",
  "cachetools",
  "loky",
  "brezn @ git+https://github.com/martenlienen/brezn",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
torchvision = "*"
torchmetrics = "*"
torch-fidelity = "==0.3.0"
python = "==3.12.8"

[tool.pixi.pypi-dependencies]
bsi = { path = ".", editable = true }

[tool.pixi.feature.cpu]
dependencies = { pytorch-cpu = "==2.5.1" }

[tool.pixi.feature.gpu]
system-requirements = {cuda = "12"}
channels = ["nvidia"]
dependencies = {pytorch-gpu = "==2.5.1", triton = "==3.1.0" }

[tool.pixi.environments]
default = {features = ["gpu"]}
cpu = {features = ["cpu", "test"]}

[tool.ruff]
line-length = 90
ignore = ["F722", "F821"]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Deprecated call to `pkg_resources.declare_namespace::lightning.fabric",
  "ignore:Deprecated call to `pkg_resources.declare_namespace::lightning.pytorch",
  "ignore:Deprecated call to `pkg_resources.declare_namespace::pkg_resources",
  "ignore:pkg_resources is deprecated as an API::lightning_utilities",
]

[tool.brezn]
files = [
  "train.py",
  "/bsi",
  "/config",
  "/scripts",
]
symlinks = [
  "data/",
  "wandb/",
  "multirun/",
  "outputs/",
  "lightning_logs/",
  "runs/",
  "results/",
]
