[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bsi"
version = "0.1.0"
description = "Bayesian Sample Inference"
authors = [
  {name = "Marten Lienen", email = "m.lienen@tum.de"},
]
license = {text = "MIT"}
dependencies = [
  # PyTorch etc.
  "lightning==2.5.1",
  "einops==0.8.1",
  "jaxtyping==0.3.0",

  # Data loading
  "h5py==3.13.0",
  "torchdata==0.11.0",
  "pillow",

  # General science & ml
  "numpy",

  # Plotting & visualization
  "matplotlib==3.10.1",

  # hydra & logging
  "wandb==0.19.8",
  "hydra-core==1.3.2",
  # dev-version for srun_args
  "hydra-submitit-launcher @ git+https://github.com/facebookresearch/hydra/#egg=hydra-submitit-launcher&subdirectory=plugins/hydra_submitit_launcher",

  # Utilities
  "tqdm",
  "rich==13.9.4",
  "ipython==9.0.2",
  "ipdb==0.13.13",
  "jupyterlab==4.3.6",
  "ipympl==0.9.7",
  "cachetools==5.5.2",
  "loky==3.5.1",
  "brezn @ git+https://github.com/martenlienen/brezn",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
torchvision = "==0.20.1|==0.21.0"
torchmetrics = "==1.6.3"
torch-fidelity = "==0.3.0"
python = "==3.13.2"

[tool.pixi.pypi-dependencies]
bsi = { path = ".", editable = true }

[tool.pixi.feature.cpu]
dependencies = { pytorch-cpu = "==2.6.0" }

[tool.pixi.feature.gpu]
system-requirements = {cuda = "12"}
dependencies = { pytorch-gpu = "==2.6.0", triton = "==3.2.0" }

[tool.pixi.environments]
default = {features = ["gpu"]}
cpu = {features = ["cpu", "test"]}

[tool.ruff]
line-length = 90
ignore = ["F722", "F821"]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Deprecated call to `pkg_resources.declare_namespace::lightning.fabric",
  "ignore:Deprecated call to `pkg_resources.declare_namespace::lightning.pytorch",
  "ignore:Deprecated call to `pkg_resources.declare_namespace::pkg_resources",
  "ignore:pkg_resources is deprecated as an API::lightning_utilities",
]

[tool.brezn]
files = [
  "train.py",
  "/bsi",
  "/config",
  "/scripts",
]
symlinks = [
  "data/",
  "wandb/",
  "multirun/",
  "outputs/",
  "lightning_logs/",
  "runs/",
  "results/",
]
